Time: 34 ms, Memory: 58.6 MB - LeetHub